chore: ajustes redirecionamento links

--- a/esqueceu-senha.html
+++ b/esqueceu-senha.html
@@ -15,7 +15,7 @@
 
 <body>
   <main class="main">
-    <form action="./index.html" class="main__esqueceu-senha">
+    <form action="./home.html" class="main__esqueceu-senha">
       <header class="main__esqueceu-senha__cabecalho">
         <h1 class="esqueceu-senha__cabecalho__titulo">Esqueceu senha</h1>
         <p class="esqueceu-senha__cabecalho__descricao">Nova senha</p>
