--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./css/base.css">
-  <link rel="stylesheet" href="./css/menu.css">
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/splash.css">
 
   <title>Frontend Mentor | FAQ Accordion Card</title>
 
@@ -16,49 +15,15 @@
 
 <body>
   <main class="main">
-
-    <nav class="menu__superior">
-      <header class="menu__superior__header">
-        <a href="" class="superior__header__link">
-          <img src="./images/icones/menu-superior-usuario.png" alt="" class="header__link__image">
-        </a>
-
-        <h2 class="superior__header__titulo">Fresh List</h2>
-
-        <a href="" class="superior__header__link">
-          <img src="./images/icones/menu-superior-sino.png" alt="" class="header__link__image">
-        </a>
-      </header>
-    </nav>
-
-    <section class="main__itens">
-      <div class="main__itens__vencimento">
-        <h2 class="itens__vencimento__titulo">Minhas compras</h2>
-        <p class="itens__vencimento__descricao">2 itens próximos do vencimento</p>
-        <a class="itens__vencimento__ver-mais botao botao--secundario">Ver mais</a>
-      </div>
-
-      <img src="./images/ilustracao/ilustracao-home.png" class="main__itens__ilustracao" alt="">
-    </section>
-
-    <nav class="menu">
-      <ul class="menu__lista">
-        <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-home.png" class="item__link__image"
-              alt=""></a>
-        </li>
-        <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-receitas.png" class="item__link__image"
-              alt=""></a>
-        </li>
-        <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-relatorio.png" class="item__link__image"
-              alt=""></a>
-        </li>
-      </ul>
-    </nav>
+    <img src="./images/logo-provisorio.png" alt="Logo Fresh List" class="main__logo">
   </main>
 
 </body>
+
+<script>
+  setTimeout(() => {
+    window.location.replace('./login.html');
+  }, 3500);
+</script>
 
 </html>
