--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <main class="main">
+  <main class="main main--tela">
 
     <nav class="menu__superior">
       <header class="menu__superior__header">
@@ -39,6 +39,58 @@
       </div>
 
       <img src="./images/ilustracao/ilustracao-home.png" class="main__itens__ilustracao" alt="">
+    </section>
+
+    <section class="main__receitas">
+      <h2 class="main__receitas__titulo">Receitas que você pode fazer</h2>
+
+      <div class="main__receitas__itens">
+        <div class="receitas__itens__card">
+          <img src="./images/alimentos/macarrao.png" alt="" class="itens__card__image">
+
+          <div class="card__conteudo">
+            <h3 class="card__conteudo__titulo">Macarrão bolonhesa</h3>
+            <p class="card__conteudo__descricao">Fácil | 30 min</p>
+          </div>
+
+          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+        </div>
+       
+        <div class="receitas__itens__card">
+          <img src="./images/alimentos/arroz.png" alt="" class="itens__card__image">
+
+          <div class="card__conteudo">
+            <h3 class="card__conteudo__titulo">Arroz de forno</h3>
+            <p class="card__conteudo__descricao">Médio | 1 hora</p>
+          </div>
+
+          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+        </div>
+
+        <div class="receitas__itens__card">
+          <img src="./images/alimentos/salada.png" alt="" class="itens__card__image">
+
+          <div class="card__conteudo">
+            <h3 class="card__conteudo__titulo">Salada de repolho</h3>
+            <p class="card__conteudo__descricao">Fácil | 5 min</p>
+          </div>
+
+          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+        </div>
+
+        <div class="receitas__itens__card">
+          <img src="./images/alimentos/panela-de-pressao.png" alt="" class="itens__card__image">
+
+          <div class="card__conteudo">
+            <h3 class="card__conteudo__titulo">Carne de panela</h3>
+            <p class="card__conteudo__descricao">Díficil | 1 hora</p>
+          </div>
+
+          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+        </div>
+
+      </div>
+
     </section>
 
     <nav class="menu">
