chore: adicionando detalhe receita e ajustes formataçao css

--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
             <p class="card__conteudo__descricao">Fácil | 30 min</p>
           </div>
 
-          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+          <a href="./detalhe-receita.html" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
         </div>
        
         <div class="receitas__itens__card">
