chore: altereção title da pagina

--- a/detalhe-receita.html
+++ b/detalhe-receita.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/menu.css">
   <link rel="stylesheet" href="./css/detalhe-receita.css">
 
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+  <title>Fresh List</title>
 
 </head>
 
