--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/login.css">
 
-  <title>Frontend Mentor | FAQ Accordion Card</title>
+  <title>Fresh List</title>
 
 </head>
 
