chore: adicionando tela de receitas

--- a/detalhe-receita.html
+++ b/detalhe-receita.html
@@ -33,9 +33,9 @@
 
     <section class="main__receita">
       <header class="main__receita__header">
-        <h2 class="receita__header__titulo">Macarrão bolonhesa</h2>
-        <p class="receita__header__descricao">Fácil | 30 minutos</p>
-        <img src="./images/alimentos/macarrao.png" class="receita__header__icone" alt="">
+        <h2 class="receita__header__titulo">Arroz de forno</h2>
+        <p class="receita__header__descricao">Médio | 1 hora</p>
+        <img src="./images/alimentos/arroz.png" class="receita__header__icone" alt="">
       </header>
 
       <div class="main__receita__ingredientes">
@@ -92,11 +92,11 @@
     <nav class="menu">
       <ul class="menu__lista">
         <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-home.png" class="item__link__image"
+        <a href="./home.html" class="lista__item__link"><img src="./images/icones/menu-home.png" class="item__link__image"
               alt=""></a>
         </li>
         <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-receitas.png" class="item__link__image"
+          <a href="./receitas.html" class="lista__item__link"><img src="./images/icones/menu-receitas.png" class="item__link__image"
               alt=""></a>
         </li>
         <li class="menu__lista__item">
