--- a/home.html
+++ b/home.html
@@ -45,48 +45,48 @@
       <h2 class="main__receitas__titulo">Receitas que você pode fazer</h2>
 
       <div class="main__receitas__itens">
-        <div class="receitas__itens__card">
-          <img src="./images/alimentos/macarrao.png" alt="" class="itens__card__image">
+        <div class="receitas__itens__card card">
+          <img src="./images/alimentos/macarrao.png" alt="" class="itens__card__image card__image">
 
           <div class="card__conteudo">
             <h3 class="card__conteudo__titulo">Macarrão bolonhesa</h3>
             <p class="card__conteudo__descricao">Fácil | 30 min</p>
           </div>
 
-          <a href="./detalhe-receita.html" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+          <a href="./detalhe-receita.html" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
         </div>
        
-        <div class="receitas__itens__card">
-          <img src="./images/alimentos/arroz.png" alt="" class="itens__card__image">
+        <div class="receitas__itens__card card">
+          <img src="./images/alimentos/arroz.png" alt="" class="itens__card__image card__image">
 
           <div class="card__conteudo">
             <h3 class="card__conteudo__titulo">Arroz de forno</h3>
             <p class="card__conteudo__descricao">Médio | 1 hora</p>
           </div>
 
-          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
         </div>
 
-        <div class="receitas__itens__card">
-          <img src="./images/alimentos/salada.png" alt="" class="itens__card__image">
+        <div class="receitas__itens__card card">
+          <img src="./images/alimentos/salada.png" alt="" class="itens__card__image card__image">
 
           <div class="card__conteudo">
             <h3 class="card__conteudo__titulo">Salada de repolho</h3>
             <p class="card__conteudo__descricao">Fácil | 5 min</p>
           </div>
 
-          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
         </div>
 
-        <div class="receitas__itens__card">
-          <img src="./images/alimentos/panela-de-pressao.png" alt="" class="itens__card__image">
+        <div class="receitas__itens__card card">
+          <img src="./images/alimentos/panela-de-pressao.png" alt="" class="itens__card__image card__image">
 
           <div class="card__conteudo">
             <h3 class="card__conteudo__titulo">Carne de panela</h3>
             <p class="card__conteudo__descricao">Díficil | 1 hora</p>
           </div>
 
-          <a href="" class="receitas__itens__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image" alt=""> </a>
+          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
         </div>
 
       </div>
@@ -96,11 +96,11 @@
     <nav class="menu">
       <ul class="menu__lista">
         <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-home.png" class="item__link__image"
+          <a href="./home.html" class="lista__item__link"><img src="./images/icones/menu-home.png" class="item__link__image"
               alt=""></a>
         </li>
         <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-receitas.png" class="item__link__image"
+          <a href="./receitas.html" class="lista__item__link"><img src="./images/icones/menu-receitas.png" class="item__link__image"
               alt=""></a>
         </li>
         <li class="menu__lista__item">
