chore: adicionando tela de notificações

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
         <h2 class="superior__header__titulo">Fresh List</h2>
 
-        <a href="" class="superior__header__link">
+    <a href="./notificacao.html" class="superior__header__link">
           <img src="./images/icones/menu-superior-sino.png" alt="" class="header__link__image">
         </a>
       </header>
