--- a/receitas.html
+++ b/receitas.html
@@ -25,7 +25,7 @@
 
         <h2 class="superior__header__titulo">Receitas</h2>
 
-        <a href="" class="superior__header__link">
+        <a href="./notificacao.html" class="superior__header__link">
           <img src="./images/icones/menu-superior-sino.png" alt="" class="header__link__image">
         </a>
       </header>
@@ -69,7 +69,7 @@
 
           <div class="card__conteudo">
             <h3 class="card__conteudo__titulo">Carne de panela</h3>
-            <span class="card__conteudo__vencimento">1 itens a vencer</span>
+            <span class="card__conteudo__vencimento">1 item a vencer</span>
             <p class="card__conteudo__descricao">Difícil | 1 hora</p>
           </div>
 
