chore: git add .

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
 
         <h2 class="superior__header__titulo">Fresh List</h2>
 
-    <a href="./notificacao.html" class="superior__header__link">
+        <a href="./notificacao.html" class="superior__header__link">
           <img src="./images/icones/menu-superior-sino.png" alt="" class="header__link__image">
         </a>
       </header>
@@ -35,7 +35,7 @@
       <div class="main__itens__vencimento">
         <h2 class="itens__vencimento__titulo">Minhas compras</h2>
         <p class="itens__vencimento__descricao">2 itens próximos do vencimento</p>
-        <a class="itens__vencimento__ver-mais botao botao--secundario">Ver mais</a>
+        <a href="./minhas-compras.html" class="itens__vencimento__ver-mais botao botao--secundario">Ver mais</a>
       </div>
 
       <img src="./images/ilustracao/ilustracao-home.png" class="main__itens__ilustracao" alt="">
@@ -53,9 +53,10 @@
             <p class="card__conteudo__descricao">Fácil | 30 min</p>
           </div>
 
-          <a href="./detalhe-receita.html" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
+          <a href="./detalhe-receita.html" class="receitas__itens__link card__link"><img
+              src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
         </div>
-       
+
         <div class="receitas__itens__card card">
           <img src="./images/alimentos/arroz.png" alt="" class="itens__card__image card__image">
 
@@ -64,7 +65,8 @@
             <p class="card__conteudo__descricao">Médio | 1 hora</p>
           </div>
 
-          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
+          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png"
+              class="itens__link__image card__link__image" alt=""> </a>
         </div>
 
         <div class="receitas__itens__card card">
@@ -75,7 +77,8 @@
             <p class="card__conteudo__descricao">Fácil | 5 min</p>
           </div>
 
-          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
+          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png"
+              class="itens__link__image card__link__image" alt=""> </a>
         </div>
 
         <div class="receitas__itens__card card">
@@ -86,7 +89,8 @@
             <p class="card__conteudo__descricao">Díficil | 1 hora</p>
           </div>
 
-          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png" class="itens__link__image card__link__image" alt=""> </a>
+          <a href="" class="receitas__itens__link card__link"><img src="./images/icones/pesquisa-de-lupa.png"
+              class="itens__link__image card__link__image" alt=""> </a>
         </div>
 
       </div>
@@ -96,12 +100,12 @@
     <nav class="menu">
       <ul class="menu__lista">
         <li class="menu__lista__item">
-          <a href="./home.html" class="lista__item__link"><img src="./images/icones/menu-home.png" class="item__link__image"
-              alt=""></a>
+          <a href="./home.html" class="lista__item__link"><img src="./images/icones/menu-home.png"
+              class="item__link__image" alt=""></a>
         </li>
         <li class="menu__lista__item">
-          <a href="./receitas.html" class="lista__item__link"><img src="./images/icones/menu-receitas.png" class="item__link__image"
-              alt=""></a>
+          <a href="./receitas.html" class="lista__item__link"><img src="./images/icones/menu-receitas.png"
+              class="item__link__image" alt=""></a>
         </li>
         <li class="menu__lista__item">
           <a href="" class="lista__item__link"><img src="./images/icones/menu-relatorio.png" class="item__link__image"
