chore: adicionando tela de relatório

--- a/notificacao.html
+++ b/notificacao.html
@@ -88,7 +88,7 @@
               class="item__link__image" alt=""></a>
         </li>
         <li class="menu__lista__item">
-          <a href="" class="lista__item__link"><img src="./images/icones/menu-relatorio.png" class="item__link__image"
+               <a href="./relatorio.html" class="lista__item__link"><img src="./images/icones/menu-relatorio.png" class="item__link__image"
               alt=""></a>
         </li>
       </ul>
