chore: criação da pagina de perfil do usuário

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
     <nav class="menu__superior">
       <header class="menu__superior__header">
-        <a href="" class="superior__header__link">
+         <a href="./perfil.html" class="superior__header__link">
           <img src="./images/icones/menu-superior-usuario.png" alt="" class="header__link__image">
         </a>
 
