--- a/detalhe-receita.html
+++ b/detalhe-receita.html
@@ -31,7 +31,7 @@
       </header>
     </nav>
 
-    <section class="main__receita">
+    <section class="main__detalhe-receita">
       <header class="main__receita__header">
         <h2 class="receita__header__titulo">Arroz de forno</h2>
         <p class="receita__header__descricao">Médio | 1 hora</p>
