--- a/home.html
+++ b/home.html
@@ -41,10 +41,10 @@
       <img src="./images/ilustracao/ilustracao-home.png" class="main__itens__ilustracao" alt="">
     </section>
 
-    <section class="main__receitas">
-      <h2 class="main__receitas__titulo">Receitas que você pode fazer</h2>
+    <section class="main__receitas-home">
+      <h2 class="main__receitas-home__titulo">Receitas que você pode fazer</h2>
 
-      <div class="main__receitas__itens">
+      <div class="main__receitas-home__itens">
         <div class="receitas__itens__card card">
           <img src="./images/alimentos/macarrao.png" alt="" class="itens__card__image card__image">
 
